test/conformance/chainsaw/namespaced-mutating-policies/admission/jsonpatch/deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-deploy-1
  namespace: test-namespace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-deploy-2
  namespace: test-namespace
  labels:
    env: test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx
