test/conformance/chainsaw/namespaced-mutating-policies/admission/jsonpatch/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: jsonpatch
spec:
  steps:
  - name: create namespace
    try:
    - create:
        file: namespace.yaml
  - name: create policy
    use:
      template: ../../../_step-templates/create-policy.yaml
      with:
        bindings:
        - name: file
          value: policy.yaml
  - name: wait-namespaced-mutating-policy-ready
    use:
      template: ../../../_step-templates/namespaced-mutating-policy-ready.yaml
      with:
        bindings:
        - name: name
          value: test-nmpol-jsonpatch
        - name: namespace
          value: test-namespace
  - name: create deployments
    try:
    - create:
        file: deployments.yaml
    - assert:
        file: deployments.yaml
  - name: check patches
    try:
    - assert:
        file: patched-deployments.yaml
